--- a/cbpp-welcome/debian/changelog
+++ b/cbpp-welcome/debian/changelog
@@ -1,6 +1,7 @@
 cbpp-welcome (9.0) unstable; urgency=low
 
   * Needed more 9's
+  * Whoops, pbuilder env was set to wheezy, surprised no one noticed
 
  -- Ben Young <computermouth@crunchbangplusplus.org>  Mon, 27 Feb 2017 23:23:12 -0800
 
