--- a/cbpp-welcome/debian/changelog
+++ b/cbpp-welcome/debian/changelog
@@ -1,3 +1,9 @@
+cbpp-welcome (11.0) unstable; urgency=low
+
+  * version bump
+
+ -- Ben Young <computermouth@crunchbangplusplus.org>  Thu, 22 Apr 2021 13:17:16 -0800
+
 cbpp-welcome (10.0) unstable; urgency=low
 
   * phpmyadmin isn't in stable buster at build time
